style.css
header {
    text-align:center;
}
body {
    display: grid;
    align-items: center;
    justify-content: center;
}
.shelf {
    width:85vw;
    height:50vh;
    border: 0.15em solid rgb(0, 0, 0);
    padding:0.5vw;
    display:grid;
    grid-template-rows: repeat(2, 1fr);
    grid-template-columns: repeat(auto-fit, minmax(100px, 15vw));
    gap:2vw;
}

.bookCard {
    background-color: rgb(182, 127, 235);
    border: 0.15em solid rgb(0, 0, 0);
    display:grid;
    grid-template-rows:5vh 5vh 2vh 2vh;
    grid-template-columns: 1fr;
    justify-content: center;
    align-content: center;
    height:20vh;
    width:15vw;
    text-align: center;
    
    padding-top:0.5em;
    
}


.title {
    font-size:1.25vw;
    font-weight: 800;

}

.author p {
    font-size:.75em;
    text-decoration: underline;

}

.pages {
    font-size: .75em;
    color:rgb(56, 56, 56);
}

.add {
    padding: 0.5em;

}

dialog {
    width:5vw;
    padding:5em;
    justify-content: center;
    align-content: center;
    text-align:center;
    flex-direction: column;
    text-wrap:wrap;
}

dialog input {
    margin:0.25em;
    width:8em;
    padding-left:0;
    
}

dialog input[type="button"] {
    margin-top: 2em;
}

.delete input[type = "button"] {
    margin-top:1.5em;
}


.read input[type="checkbox"] {
    margin-top:1em;
    margin-left:0.2em;
}

.read {
    display: flex;
    justify-content: end;
    align-items: center;
    margin-top:0.5em;
}

.read p {
    font-size: .65em;
    margin-bottom:0;
}

.bookCard.checked {
    background-color: rgb(116, 230, 116);
}

